--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Service</a></li>
                         <!--li class="nav-item"><a class="nav-link js-scroll-trigger" href="#courses">Courses</a></li-->
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact"></a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contactus</a></li>
                     </ul>
                 </div>
             </div>
@@ -93,7 +93,7 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
-                        <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
+                        <i class="fas fa-phone fa-3x mb-3 text-muted">Contact us</i>
                         <div>+91 9381062032</div>
                     </div>
                     <div class="col-lg-4 mr-auto text-center">
